--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -25,3 +25,23 @@
     background-color: transparent !important; /* Remove focus background */
     /* box-shadow: none !important; Remove any box-shadow if present */
   }
+
+  .inset-0{
+    top:0;
+    bottom:0;
+    left:0;
+    right:0;
+  }
+  .blur-filter{
+    backdrop-filter: blur(5px);
+  }
+
+  /* Adding padding for Nav */
+.navbar-wrapper nav ul li {
+    padding: 0.5rem 1rem; /* Adjust padding as needed */
+}
+
+
+
+
+
