--- a/src/styles/packages.css
+++ b/src/styles/packages.css
@@ -42,3 +42,10 @@
     border-bottom-right-radius: 0px;
 
 }
+
+.line-clamp {
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+}
